fix footer contrast

--- a/projects/storefrontstyles/scss/layout/page-templates/_common-template.scss
+++ b/projects/storefrontstyles/scss/layout/page-templates/_common-template.scss
@@ -21,6 +21,10 @@ cx-page-layout {
 
   &.footer {
     background-color: var(--cx-color-dark);
+    @include forFeature('santoriniV2') {
+      background-color: var(--cx-color-secondary);
+    }
+
     color: var(--cx-color, var(--cx-color-inverse));
   }
 }
